bin/tests/snapshots/legacy_let_syntax__7b38199c6c6f7f991caca355bdf9d4eb_lint_errfmt.snap
---
source: bin/tests/legacy_let_syntax.rs
---
let {
  body = x + y;
  x = "hello,";
  y = " world!";
}
---
<temp_file_path>>1:1:W:5:Prefer `rec` over undocumented `let` syntax
