bin/tests/snapshots/legacy_let_syntax__7b38199c6c6f7f991caca355bdf9d4eb_lint_stderr.snap
---
source: bin/tests/legacy_let_syntax.rs
---
let {
  body = x + y;
  x = "hello,";
  y = " world!";
}
---
[legacy_let_syntax] Warning: Using undocumented `let` syntax
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ ╭─▶ let {
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── Prefer rec over undocumented let syntax
───╯
