bin/tests/snapshots/legacy_let_syntax__fix_7b38199c6c6f7f991caca355bdf9d4ebb9a8efc7745407121fc6b5702dd94e74.snap
---
source: bin/tests/legacy_let_syntax.rs
---
let {
  body = x + y;
  x = "hello,";
  y = " world!";
}

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,5 @@
-let {
+rec {
   body = x + y;
   x = "hello,";
   y = " world!";
-}
+}.body
