bin/tests/snapshots/legacy_let_syntax__lint_7b38199c6c6f7f991caca355bdf9d4ebb9a8efc7745407121fc6b5702dd94e74.snap
---
source: bin/tests/legacy_let_syntax.rs
---
let {
  body = x + y;
  x = "hello,";
  y = " world!";
}
---
[W05] Warning: Using undocumented `let` syntax
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ╭─▶ let {
 5 │ ├─▶ }
   · │       
   · ╰─────── Prefer rec over undocumented let syntax
───╯
